# CLAPACK

./: CMakeLists.txt
BLAS/SRC/: CMakeLists.txt
CBLAS/: CMakeLists.txt
CBLAS/include/: CMakeLists.txt  cblas_mangling.h
CBLAS/src/: CMakeLists.txt
F2CLIBS/libf2c/: CMakeLists.txt  f2c.h  fio.h  inquire.c  sig_die.c  stubs.c  uninit.c
LAPACKE/: CMakeLists.txt
LAPACKE/example/: CMakeLists.txt
LAPACKE/include/: CMakeLists.txt  lapack.h  lapacke_config.h
LAPACKE/src/: lapacke_dgelss.c  lapacke_dgelss_work.c  lapacke_dgesvd.c  lapacke_dgesvd_work.c  lapacke_dgetrf_work.c  lapacke_dgetri.c  lapacke_dgetri_work.c
SRC/: CMakeLists.txt
